--- a/reto-2/index.html
+++ b/reto-2/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/ejercicios.js"></script>
+    <script src="./ejercicios.js"></script>
 </body>
 </html>
